[gd_scene load_steps=2 format=3 uid="uid://corecardscene"]

[ext_resource type="Script" path="res://src/Scripts/UI/CoreCard.gd" id="1_script"]

[node name="CoreCard" type="Button"]
custom_minimum_size = Vector2(200, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
clip_text = true
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="EmojiLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
autowrap_mode = 3
horizontal_alignment = 1
